--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: Devathon Project
+name: DevathonProject
 description: A project for the Devathon contest
 version: 1.0.0
-author: Your Name Here
-
-main: org.devathon.contest2016.DevathonPlugin
-
+author: KrisVos130
+main: org.devathon.contest2016.Main
+commands:
+  test:
